--- a/index.html
+++ b/index.html
@@ -41,11 +41,14 @@
                 <a class="nav-link" href="#">Contact</a>
               </li>
             </ul>
-            <form class="d-flex ms-auto align-items-center" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" style="font-size: 0.9rem; height: 2.5rem; width: 200px;">
-                <button class="btn btn-outline-light me-3" type="submit" style="font-size: 0.9rem;">Search</button>
+
+      <div class="d-flex align-items-center ms-auto">
+        <form class="d-flex me-3" role="search">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" style="font-size: 0.9rem; height: 2.5rem; width: 200px;">
+          <button class="btn btn-outline-light" type="submit" style="font-size: 0.9rem;">Search</button>
+        </form>
                 
-                <div class="social-icons ms-10">
+                <div class="social-icons">
                     <a href="#" class="text-white me-2"><i class="fab fa-facebook-f"></i></a>
                     <a href="#" class="text-white me-2"><i class="fab fa-twitter"></i></a>
                     <a href="#" class="text-white me-2"><i class="fab fa-instagram"></i></a>
