--- a/index.html
+++ b/index.html
@@ -51,5 +51,23 @@
           </div>
         </div>
       </nav>
+
+    <!-- Hero 1 - Bootstrap Brain Component -->
+    <section class="bsb-hero-1 px-3 bsb-overlay bsb-hover-pull" style="background-image: url('assets/img/ethan-walsweer-DMHK9_4JFkI-unsplash.jpg');">
+        <div class="container">
+        <div class="row justify-content-md-center">
+            <div class="col-12 col-md-11 col-lg-9 col-xl-7 col-xxl-6 text-center text-white">
+            <br><br><br><br><br>
+            <h2 class="display-3 fw-bold mb-3">Art of Design</h2>
+            <p class="lead mb-5">Powerful, extensible, and feature-packed frontend toolkit. Build and customize with Sass, utilize prebuilt grid system and components, and bring projects to life with powerful JavaScript plugins.</p>
+            <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+                <button type="button" class="btn bsb-btn-xl btn-light gap-3">Free Consultation</button>
+                <button type="button" class="btn bsb-btn-xl btn-outline-light">Buy Credits</button>
+            </div>
+            <br><br><br><br><br><br>
+            </div>
+        </div>
+        </div>
+    </section>
 </body>
 </html>
