--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <h2 class="display-2 fw-bold mb-3">Crafting Digital Experiences</h2>
             <p class="lead mb-5">Powerful, extensible, and feature-packed frontend toolkit. Build and customize with Sass, utilize prebuilt grid system and components, and bring projects to life with powerful JavaScript plugins.</p>
             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-            <button type="button" class="btn btn-lg bsb-btn-xl btn-outline-light">My portfolio</button>
+            <button type="button" class="btn btn-lg bsb-btn-xl btn-outline-light rounded-0">My portfolio</button>
             </div>
             <br><br><br><br><br><br><br><br>
             </div>
