--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
 <body>
     <!--Nav-->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary text-white" data-bs-theme="dark">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary text-white"data-bs-theme="dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
             <img src="assets/img/pnghq.com-zapier-free-png-downloads-5.png" alt="" width="30px">
@@ -58,10 +58,10 @@
         <div class="row justify-content-md-center">
             <div class="col-12 col-md-11 col-lg-9 col-xl-7 col-xxl-6 text-center text-white">
             <br><br><br><br><br><br><br>
-            <h2 class="display-2 fw-bold mb-3">Crafting Digital Experiences</h2>
-            <p class="lead mb-5">Powerful, extensible, and feature-packed frontend toolkit. Build and customize with Sass, utilize prebuilt grid system and components, and bring projects to life with powerful JavaScript plugins.</p>
+            <h2 class="display-2 fw-bold mb-3">Crafting digital experiences.</h2>
+            <p class="lead mb-5">Tell your unique story through the art of visual storytelling.</p>
             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-            <button type="button" class="btn btn-lg bsb-btn-xl btn-outline-light rounded-0">My portfolio</button>
+            <button type="button" class="btn btn-lg bsb-btn-xl btn-outline-light rounded-0 width-80">My portfolio</button>
             </div>
             <br><br><br><br><br><br><br><br>
             </div>
