--- a/index.html
+++ b/index.html
@@ -24,18 +24,11 @@
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  About
-                </a>
-                <ul class="dropdown-menu" style="font-size: 0.9rem;">
-                  <li><a class="dropdown-item" href="#">Our project</a></li>
-                  <li><a class="dropdown-item" href="#">Our team</a></li>
-                  <li><a class="dropdown-item" href="#">Our partners</a></li>
-                </ul>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Our products</a>
+                <a class="nav-link" href="#">My Work</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Contact</a>
