--- a/index.html
+++ b/index.html
@@ -79,43 +79,43 @@
 <div class="row">
     <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
       <img
-        src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(73).webp"
+        src="assets/img/danny-greenberg-LtbH3-yD5ms-unsplash.jpg"
         class="w-100 shadow-1-strong rounded mb-4"
-        alt="Boat on Calm Water"
+        alt="/"
       />
   
       <img
-        src="https://mdbcdn.b-cdn.net/img/Photos/Vertical/mountain1.webp"
+        src="assets/img/ricardo-resende-S07ipcMrVLw-unsplash.jpg"
         class="w-100 shadow-1-strong rounded mb-4"
-        alt="Wintry Mountain Landscape"
-      />
-    </div>
-  
-    <div class="col-lg-4 mb-4 mb-lg-0">
-      <img
-        src="https://mdbcdn.b-cdn.net/img/Photos/Vertical/mountain2.webp"
-        class="w-100 shadow-1-strong rounded mb-4"
-        alt="Mountains in the Clouds"
-      />
-  
-      <img
-        src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(73).webp"
-        class="w-100 shadow-1-strong rounded mb-4"
-        alt="Boat on Calm Water"
+        alt="/"
       />
     </div>
   
     <div class="col-lg-4 mb-4 mb-lg-0">
       <img
-        src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(18).webp"
+        src="assets/img/seelean-MA7SXLbdWs4-unsplash.jpg"
         class="w-100 shadow-1-strong rounded mb-4"
-        alt="Waves at Sea"
+        alt="/"
       />
   
       <img
-        src="https://mdbcdn.b-cdn.net/img/Photos/Vertical/mountain3.webp"
+        src="assets/img/the-chaffins-duzpCQape2U-unsplash.jpg"
         class="w-100 shadow-1-strong rounded mb-4"
-        alt="Yosemite National Park"
+        alt="/"
+      />
+    </div>
+  
+    <div class="col-lg-4 mb-4 mb-lg-0">
+      <img
+        src="assets/img/doncoombez-wYb382OEX5s-unsplash.jpg"
+        class="w-100 shadow-1-strong rounded mb-4"
+        alt="/"
+      />
+  
+      <img
+        src="assets/img/hanvin-cheong-sETMEiAiDOM-unsplash.jpg"
+        class="w-100 shadow-1-strong rounded mb-4"
+        alt="/"
       />
     </div>
   </div>
