--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <div class="container">
         <div class="row justify-content-center text-center mb-5">
             <div class="col-12 col-lg-8">
-                <h2 class="section-title">Titre</h2>
+                <h2 class="section-title">My work</h2>
                 <p class="section-description">Copy.</p>
             </div>
         </div>
@@ -78,17 +78,19 @@
     <!-- Gallery -->
 <div class="row">
     <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
-      <img
+
+    <img
         src="assets/img/hanvin-cheong-sETMEiAiDOM-unsplash.jpg"
         class="w-100 shadow-1-strong rounded mb-4"
         alt="/"
-      />
-  
-      <img
+    />
+
+    <img
         src="assets/img/ricardo-resende-S07ipcMrVLw-unsplash.jpg"
         class="w-100 shadow-1-strong rounded mb-4"
         alt="/"
-      />
+    />
+
     </div>
   
     <div class="col-lg-4 mb-4 mb-lg-0">
@@ -120,6 +122,10 @@
     </div>
   </div>
   <!-- Gallery -->
+
+  <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+    <button type="button" class="btn btn-lg bsb-btn-xl btn-outline-dark rounded-0 width-80">See more</button>
+    </div>
 
     </div>
        
