--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <a class="nav-link" href="#">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">My Work</a>
+                <a class="nav-link" href="#work">My Work</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Contact</a>
@@ -70,8 +70,8 @@
     <div class="container">
         <div class="row justify-content-center text-center mb-5">
             <div class="col-12 col-lg-8">
-                <h2 class="section-title">My work</h2>
-                <p class="section-description">Copy.</p>
+                <h2 class="section-title" id="work">My work</h2>
+                <p class="section-description">Some examples of my latest work.</p>
             </div>
         </div>
        
