--- a/index.html
+++ b/index.html
@@ -65,6 +65,18 @@
 <!-- Content -->
 <br><br>
 
+<!--Section 1-->
+
+<div class="container">
+    <div class="row justify-content-center text-center mb-5">
+        <div class="col-12 col-lg-8">
+            <h2 class="section-title" id="work">About me</h2>
+                <p class="section-description">I'm a passionate photographer dedicated to capturing authentic moments and turning them into lasting memories. With a love for storytelling through imagery, blending creativity with a keen eye for detail.</p>
+        </div>
+    </div>
+
+<!--Section 1-->
+
 <!--Section 2 -->
 <section class="image-grid-section py-5">
     <div class="container">
