--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </section>
 
 <!-- Content -->
-<br><br>
+<br><br><br><br>
 
 <!--Section 1-->
 
@@ -71,7 +71,8 @@
     <div class="row justify-content-center text-center mb-5">
         <div class="col-12 col-lg-8">
             <h2 class="section-title" id="work">About me</h2>
-                <p class="section-description">I'm a passionate photographer dedicated to capturing authentic moments and turning them into lasting memories. With a love for storytelling through imagery, blending creativity with a keen eye for detail.</p>
+                <p class="section-description">I'm a passionate photographer dedicated to capturing authentic moments and turning them into lasting memories. With a love for storytelling through imagery, blending creativity with a keen eye for detail.<br><br>
+                    For me, photography is more than just taking pictures—it’s about evoking emotions, preserving real connections, and finding beauty in the everyday.</p>
         </div>
     </div>
 
