--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="#about">About</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#work">My Work</a>
@@ -70,7 +70,7 @@
 <div class="container">
     <div class="row justify-content-center text-center mb-5">
         <div class="col-12 col-lg-8">
-            <h2 class="section-title" id="work">About me</h2>
+            <h2 class="section-title" id="about">About me</h2>
                 <p class="section-description">I'm a passionate photographer dedicated to capturing authentic moments and turning them into lasting memories. With a love for storytelling through imagery, blending creativity with a keen eye for detail.<br><br>
                     For me, photography is more than just taking pictures—it’s about evoking emotions, preserving real connections, and finding beauty in the everyday.</p>
         </div>
