update hero button

--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
             <h2 class="display-2 fw-bold mb-3">Crafting digital experiences.</h2>
             <p class="lead mb-5">Tell your unique story through the art of visual storytelling.</p>
             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-            <button type="button" class="btn btn-lg bsb-btn-xl btn-outline-light rounded-0 width-80 rounded-3">My portfolio</button>
+            <!-- <button type="button" class="btn btn-lg bsb-btn-xl btn-outline-light rounded-0 width-80 rounded-3" href="#work">My portfolio</button> -->
+            <a href="#work" class="btn btn-lg bsb-btn-xl btn-outline-light rounded-0 width-80 rounded-3" role="button">Portfolio</a>
             </div>
             <br><br><br><br><br><br><br><br>
             </div>
