--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <a class="nav-link" href="#work">My Work</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" href="#contact">Contact</a>
               </li>
             </ul>
 
