--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <a class="nav-link" href="#work">My Work</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" href="#contact">Contact</a>
               </li>
             </ul>
 
@@ -166,14 +166,6 @@
                 <p class="section-description">Drop me a message with your enquiry or questions about my work.</p>
             </div>
         </div>
-
-        <div class="container">
-          <div class="row justify-content-center text-center mb-5">
-              <div class="col-12 col-lg-8">
-                  <h2 class="section-title" id="contact">Let's get in touch!</h2>
-                  <p class="section-description">Drop me a message with your enquiry or questions about my work.</p>
-              </div>
-          </div>
       
           <!-- Add a custom class to the form container -->
           <div class="container form-container"> 
