--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
 
 <!-- Content -->
 
-<br><br><br><br>
+<br><br><br>
 
 <!--Section 1-->
-<section>
+<!-- <section> -->
   <div class="container">
       <div class="row justify-content-center text-center mb-5">
           <div class="col-12 col-lg-8">
@@ -81,7 +81,7 @@
 </section>
 
 <!--Section 2 -->
-<section class="image-grid-section py-5">
+<!-- <section class="image-grid-section py-5"> -->
     <div class="container">
         <div class="row justify-content-center text-center mb-5">
             <div class="col-12 col-lg-8">
@@ -156,13 +156,21 @@
 
 <!--Section 2-->
 
-<br><br>
+<br><br><br>
 
 <!--Section 3-->
+<!-- <section class="image-grid-section py-5"> -->
+  <div class="container">
+      <div class="row justify-content-center text-center mb-5">
+          <div class="col-12 col-lg-8">
+              <h2 class="section-title" id="contact">Let's get in touch!</h2>
+              <p class="section-description">Drop me a message to learn more about my services.</p>
+          </div>
+      </div>
 
 <div class="container">
   <div class="row justify-content-center">
-      <div class="col-12 col-md-6"> <!-- Restrict form width -->
+      <div class="col-12 col-md-4"> <!-- Restrict form width -->
           <form id="contact-form" action="mail.php" method="POST">
               <!-- Name input -->
               <div class="form-outline mb-4">
@@ -198,6 +206,7 @@
       </div>
   </div>
 </div>
+</section>
 
 
 <br><br>        
